bankapp(initial preparation of the project): register page creation

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 
             <!-- Button Wrapper -->
             <div class="button-wrapper d-flex align-items-center">
-                <a href="" class="btn btn-md register" role="button">Register</a>
+                <a href="register.html" class="btn btn-md register" role="button">Register</a>
                 <a href="" class="btn btn-md login" role="button">Login</a>
             </div>
             <!-- End Of Button Wrapper -->
