--- a/static/login.html
+++ b/static/login.html
@@ -6,28 +6,20 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/default.css">
-    <title>Register </title>
+    <title>Login</title>
 </head>
 <body class="d-flex align-items-center justify-content-center">
 
-    <!-- Card : Registration Form Card -->
-    <div class="card registration-form-card col-6 bg-transparent border-0">
+    <!-- Card : Login Form Card -->
+    <div class="card login-form-card col-4 bg-transparent border-0">
         <!-- Card Body -->
         <div class="card-body">
             <!-- Form Header -->
             <h1 class="form-header card-title mb-3">
-                <i class="fa fa-edit"></i> Register
+                <i class="fa fa-user-circle"></i> Login
             </h1>
             <!-- End Of Form Header -->
-            <form action="" class="reg-form">
-                <div class="row">
-                    <div class="form-group col">
-                        <input type="text" name="first_name" class="form-control form-control-lg" placeholder="Enter First Name"/>
-                    </div>
-                    <div class="form-group col">
-                        <input type="text" name="last_name" class="form-control form-control-lg" placeholder="Enter Last Name"/>
-                    </div>
-                </div>    
+            <form action="" class="login-form">
                     <div class="form-group col">
                         <input type="email" name="email" class="form-control form-control-lg" placeholder="Enter Email"/>
                     </div>
@@ -35,18 +27,15 @@
                     <div class="form-group col">
                         <input type="password" name="password" class="form-control form-control-lg" placeholder="Enter Password"/>
                     </div>
-                    <div class="form-group col">
-                        <input type="password" name="confirm_password" class="form-control form-control-lg" placeholder="Confirm Password"/>
-                    </div>
                 </div>
                 <div class="form-group col">
-                    <button class="btn btn-lg">Register</button>
+                    <button class="btn btn-lg">Login</button>
                 </div>    
                 </div>
             </form>
             
             <p class="card-text text-white my-2">
-                Already have an account? <span class="ms-2"><a href="login.html" class="btn btn-sm text-warning">Sign In</a></span>
+                Dont have an account? <span class="ms-2"><a href="register.html" class="btn btn-sm text-warning">Sign Up</a></span>
             </p>
 
             <small class="text-warning">
@@ -56,6 +45,6 @@
         </div>
         <!-- End Of Card Body -->
     </div>
-    <!-- Card : Registration Form Card -->
+    <!-- Card : Login Form Card -->
 </body>
 </html> 
